daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon-multitool
  namespace: net
  labels:
    app: daemon
spec:
  selector:
    matchLabels:
      app: daemon
  template:
    metadata:
      labels:
        app: daemon
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
        - name: vol
          mountPath: /input/logs
        ports:
        - containerPort: 8080
      volumes:
      - name: vol
        hostPath:
          path: /var/log/syslog
