deployment_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multi-back
        image: wbitt/network-multitool
