pod-tool.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ping-pod
  namespace: netology
spec:
    containers:
    - name: multitool
      image: wbitt/network-multitool
