service-canary-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1
spec:
  selector:
    app: nginx
    version: "1"
  ports:
    - name: nginx-v1
      protocol: TCP
      port: 80
      targetPort: 80
