service-canary-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
spec:
  selector:
    app: nginx
    version: "2"
  ports:
    - name: nginx-v2
      protocol: TCP
      port: 80
      targetPort: 80
