service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-multitool
  namespace: netology
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  - name: multitool
    port: 1180
    protocol: TCP
    targetPort: 1180  
  selector:
    app: web
