service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: net
spec:
  ports:
  - name: nginx-https
    port: 80
    protocol: TCP
    targetPort: 80
