service_back.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: net
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80 
  selector:
    app: nginx
