service_front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-multitool
  namespace: net
spec:
  ports:
  - name: multitool
    port: 80
    protocol: TCP
    targetPort: 80 
  selector:
    app: multitool
