network-policy-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-to-back
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: back
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: back
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: cache
